# Linkedin-7--System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  vercel.json
app/: excel_builder.py  generator.py  main.py  prompts.py  sheets_part1.py  sheets_part2.py  sheets_part3.py
frontend/: app.js  index.html  style.css
templates/: excel_template.py
